# Nieuwsbrief

./: .gitignore  CLAUDE.md  PLAN.md  demo-bundesliga.py  demo-voetbalreizenxl.py
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  main.py  middleware.py  ratelimit.py  schemas.py
backend/app/db/: models.py  session.py
backend/app/newsletter/: capabilities.py  card_block.py  custom_fields.py  extraction.py  models.py  orchestrator.py  pricing.py  prompts.py  renderer.py  save_validation.py  styles.py  template_health.py  template_validation.py  templates.py  toolproof.py  toolproof_ops.py  tools.py  validation_cache.py
backend/app/repositories/: conversations.py  (+6 more)
backend/tests/: conftest.py  test_activecampaign.py  test_auth_gate.py  test_auth_roles.py  test_brevo.py  test_capabilities.py  test_card_block.py  test_company_prefill.py  test_config.py  test_conversations_routes.py  test_crypto.py  test_custom_fields.py  test_extraction.py  test_frontend.py  test_golden_render.py  test_images_routes.py  test_klaviyo.py  test_login_supabase.py  test_neutral_fallback.py  test_orchestrator.py  test_pricing.py  test_prompts.py  test_ratelimit.py  test_renderer.py  test_renderer_any_template.py  test_save_validation.py  test_storage.py  test_supabase_auth.py  test_template_styles.py  test_template_validation.py  test_templates_repo.py  test_templates_routes.py  test_tenant_scoping.py  test_tenants_repo.py  test_tenants_routes.py  test_token_kosten.py  test_tone.py  test_toolproof.py  test_toolproof_ops.py  test_toolproof_roundtrip.py  (+2 more)
(+60 files in other folders)
